// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Choose your Room type page Component should render ChooseRoomTypePageCCUI 1`] = `
<div>
  <div
    data-testid="ChooseRoomTypePage"
  />
</div>
`;

exports[`Choose your Room type page getLayout should wrap page with SecondaryHDPLayout and ErrorBoundary 1`] = `
<div>
  <div
    data-testid="SecondaryHDPLayout"
  >
    <div
      data-testid="ErrorBoundary"
    >
      <div
        data-testid="ChooseRoomTypePage"
      />
    </div>
  </div>
</div>
`;
